fix: Style fixes for table header filters

--- a/src/app/common/table/filter/_shared.scss
+++ b/src/app/common/table/filter/_shared.scss
@@ -4,7 +4,7 @@
 $filter-dropdown-font-size: 0.75rem !default;
 $filter-dropdown-max-height: 250px !default;
 
-button {
+button.dropdown-toggle {
 	background: inherit;
 	border: none;
 	font: inherit;
