--- a/src/app/common/table/filter/asy-header-list-filter/asy-header-list-filter.component.scss
+++ b/src/app/common/table/filter/asy-header-list-filter/asy-header-list-filter.component.scss
@@ -1,3 +1,9 @@
 @import '../../../../../styles/overrides';
 @import '../../../../../styles/shared';
 @import '../shared';
+
+.dropdown-menu {
+	.clear button {
+		font-size: $filter-dropdown-font-size;
+	}
+}
