feat: Align styling of ngx-bootstrap dropdowns and ng-select
Depending on the use case, we currently use a mixture of ngx-bootstrap dropdowns and ng-select.  This aligns the styling of the 2 so that they better fit with the overall UI.

--- a/src/styles/_ng-select.scss
+++ b/src/styles/_ng-select.scss
@@ -10,6 +10,7 @@
 	}
 }
 
+$ng-select-marked: $ux-color-light-gray !default;
 $ng-select-highlight: $input-focus-border-color !default;
 $ng-select-border: $input-border-color !default;
 $ng-select-border-radius: $border-radius !default;
