style: ESLint Updates
* Fix eslint warnings
* Add additional eslint rules to enforce proper handling of rxjs subscriptions.
* Add additional eslint rule to enforce member sorting within single import statements.

--- a/src/app/core/admin/user-management/list-users/admin-list-users.component.html
+++ b/src/app/core/admin/user-management/list-users/admin-list-users.component.html
@@ -206,7 +206,7 @@
 										Edit
 									</button>
 								</li>
-								<li role="menuitem" *ngIf="allowDeleteUser">
+								<li role="menuitem" *ngIf="allowDeleteUser$ | async">
 									<button class="dropdown-item" (click)="confirmDeleteUser(user)">
 										Delete
 									</button>
