feat(teams): Add `hasTeamRole` and `hasSomeTeamRoles` directives
* Directives modeled after the user roles directives.
* Updated team components to use the directives.
* Cleaned up unused in view team component

--- a/src/app/core/teams/view-team/general-details/general-details.component.html
+++ b/src/app/core/teams/view-team/general-details/general-details.component.html
@@ -18,8 +18,8 @@
 					class="btn btn-outline-secondary ml-3"
 					type="button"
 					[disabled]="isEditing"
-					*ngIf="canManageTeam"
 					(click)="edit()"
+					*hasTeamRole="team; role: 'admin'"
 				>
 					<span class="fa-solid fa-lg fa-pencil"></span>
 				</button>
