--- a/src/app/core/teams/list-team-members/list-team-members.component.html
+++ b/src/app/core/teams/list-team-members/list-team-members.component.html
@@ -11,10 +11,10 @@
 
 			<div class="mb-3 ml-auto">
 				<button
-					*ngIf="canManageTeam"
-					(click)="addMembers()"
 					type="button"
 					class="btn btn-primary ml-auto"
+					(click)="addMembers()"
+					*hasTeamRole="team; role: 'admin'"
 				>
 					<span class="fa-solid fa-plus"></span> Add New
 				</button>
@@ -71,7 +71,7 @@
 						class="dropdown dropdown-table-inline"
 						dropdown
 						container="body"
-						*ngIf="canManageTeam; else readOnlyRole"
+						*hasTeamRole="team; role: 'admin'; else: readOnlyRole"
 					>
 						<span class="dropdown-toggle" dropdownToggle>
 							<span class="mr-1">{{ member.roleDisplay }}</span>
@@ -95,12 +95,12 @@
 				<th cdk-header-cell *cdkHeaderCellDef></th>
 				<td cdk-cell *cdkCellDef="let member">
 					<a
-						*ngIf="member.explicit"
 						class="btn-icon"
 						tooltip="Remove Member"
 						container="body"
 						placement="bottom"
 						(click)="removeMember(member)"
+						*hasTeamRole="team; role: 'admin'; and: member.explicit"
 					>
 						<span class="fa-solid fa-lg fa-trash"></span>
 					</a>
