refactor: Replace topic registries with Angular providers

--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -56,7 +56,7 @@
 
 				<ng-template #adminNav>
 					<ul class="popover-menu" role="menu">
-						<li *ngFor="let adminItem of adminMenuItems">
+						<li *ngFor="let adminItem of adminTopics">
 							<a
 								[routerLink]="[
 									'admin/' + adminItem.path,
